--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     right: 35px;
     margin-top: 25px;
     font-size: 14px;
+    text-decoration: none;
     font-weight: 700;
   }
 
@@ -109,6 +110,7 @@
     margin-top: 25px;
     font-size: 14px;
     font-weight: 700;
+    text-decoration: none;
   }
 
   .signup:hover
