--- a/login/index.html
+++ b/login/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width", initial-scale="1.0">
   <title>Login Page</title>
   <link href="/font/Neoneon/stylesheet.css" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
@@ -48,7 +49,7 @@
   </form>
   <div class="sep"></div>
   <div class="create-container">
-    <a class="create" rel="async" role="button">Create New Account</a>
+    <a class="create" href="/signup/index.html" rel="async" role="button">Create New Account</a>
   </div>
   </div>
   </div>
@@ -110,6 +111,7 @@
     background: rgb(240, 242, 245);
     color: #1c1e21;
     direction: ltr;
+    object-position: center;
     line-height: 1.34;
     margin: 0;
     padding: 0;
@@ -128,7 +130,7 @@
     padding: 20px 0;
     position: relative;
     height: 496px;
-    margin: 0 40px;
+    margin: 40px;
     width: auto;
     display: flex;
     flex-direction: column;
