--- a/signup/index.html
+++ b/signup/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Signup Page</title>
     <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-auth.js"></script>
@@ -52,39 +53,70 @@
   </head>
   <body>
     <div class="container">
-      <div class="containersub">
-    <div class="head">
-    <h1 class="head1">Signup Page</h1>
-    <h2 class="head2">It's quick and easy.</h2>
-  </div>
-  <div class="formdiv">
-    <form class="form" id="signup-form">
-      <div class="form-group">
-        <div class="col-md">
-          <div class="col-md-">
-      <input class="col-fn" type="text" id="firstname" placeholder="First Name" name="firstname" required>
-      <input class="col-ln" type="text" id="lastname" placeholder="Last Name" name="lastname" required>
+      <div class="logo-container">
+      <div class="container-logo">
+      <img src="/icons/J.A.R.V.I.Z..svg" class="logo">
+      </img>
       </div>
-    </div>
-    <input class="user" placeholder="Username" type="text" id="username" name="username" required>
-    <input class="email" placeholder="Email" type="email" id="email" name="email" required>
-    <input placeholder="Phone Number" class="phone" type="text" id="phonenumber" name="phonenumber" required>
-    <input  class="pass" placeholder="New Password" type="password" id="password" name="password" required>
-    <label class="dtalab" for="dateofbirth">Date of birth:</label>
-    <input class="date" type="date" id="dateofbirth" name="date Of Birth" required>
-    <label for="gender">Gender:</label>
-    <input type="radio" id="male" name="gender" value="male" required>
-    <label for="male">Male</label>
-    <input type="radio" id="female" name="gender" value="female" required>
-    <label for="female">Female</label>
-    <input type="radio" id="other" name="gender" value="other" required>
-    <label for="other">Other</label>
-    <input type="submit" value="Sign Up">
-  </div>
-    </form>
-  </div>
-  </div>
-</div>
+      </div>
+      <div class="container-">
+      <div class="container-form">
+      <div class="form-container">
+      <div class="container-headlog">
+      <div class="headlog">
+        Create a new account
+      </div>
+      <div class="headlogg">
+        It's quick and easy.
+      </div>
+      </div>
+      <form id="login-form">
+        <div>
+        <div class="-container">
+          <input class="input" type="text" id="firstname" placeholder="First Name" name="firstname" required>
+        </div>
+        <div class="-container">
+          <input class="input" type="text" id="lastname" placeholder="Last Name" name="lastname" required>
+        </div>
+        <div class="-container">
+          <input class="input" placeholder="Username" type="text" id="username" name="username" required>
+        </div>
+        <div class="-container">
+          <input placeholder="Phone Number" class="input" type="text" id="phonenumber" name="phonenumber" required>
+        </div>
+        <div class="-container">
+          <input  class="input" placeholder="New Password" type="password" id="password" name="password" required>
+        </div>
+        <div class="-container">
+          <input class="input" placeholder="Date Of Birth" type="date" id="dateofbirth" name="date Of Birth" required>
+        </div>
+        <div class="gender-container">
+        <div class="gender-lable">
+        Gender:
+        </div>
+        <span class="gen-contrainer">
+        <span class="male-container">
+        <label class="male-lable" for="male">Male</label>
+        <input class="male" type="radio" id="male" name="gender" value="male" required>
+        </span>
+        <span class="female-container">
+        <label class="male-lable" for="female">Female</label>
+        <input class="male" type="radio" id="female" name="gender" value="female" required>
+        </span>
+      </span>
+        </div>
+        <div class="signup-container">
+          <input class="signup" type="submit" value="Sign Up">
+        </div>
+        <div class="already-signup-container">
+          <a class="already-signup" href="/login/index.html">Already have an account?..</a>
+        </div>
+      </div>
+      </form>
+      </div>
+      </div>
+      </div>
+      </div>
     <script>
       // Get the form element
       var form = document.getElementById("signup-form");
@@ -164,7 +196,111 @@
 </html>
 
 <style>
-  .head
+    .container
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    padding: 20px 0;
+    position: relative;
+    height: 496px;
+    margin: 0 40px;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  }
+
+  .logo-container
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    box-sizing: border-box;
+    width: 400px;
+    margin: 0 auto;
+    padding: 0;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  }
+
+  .container-logo
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    text-align: center;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+    padding: 0 0 20px 0;
+  }
+
+  .logo
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    text-align: center;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+    border: 0;
+    height : 106px;
+    width: 301px;
+  }
+
+  .container-
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    float: none;
+    margin: 0 auto;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  }
+
+  .container-form
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    text-align: center;
+    height: 456px;
+    width: 396px;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  }
+
+  .form-container
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    align-items: center;
+    background-color: #fff;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
+    box-sizing: border-box;
+    margin-top: 40px;
+    padding: 20px 0 28px;
+    width: 396px;
+    text-align: center;
+    padding-bottom: 24px;
+    padding-top: 10px;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  }
+
+  .container-headlog
   {
     color: #1c1e21;
     direction: ltr;
@@ -176,12 +312,12 @@
     box-sizing: border-box;
     padding: 10px 16px;
     position: relative;
-    width: 432px;
+    width: px;
     z-index: 1;
     font-family: inherit;
   }
 
-  .head1
+  .headlog
   {
     direction: ltr;
     font-weight: 600;
@@ -193,7 +329,61 @@
     text-align: center;
   }
 
-  .head2
+  .-container
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    text-align: center;
+    display: inline-block;
+    margin: auto;
+    padding: 6px 0;
+    font-size: 17px;
+    width: 364px;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  }
+
+  .input
+  {
+    direction: ltr;
+    -webkit-appearance: none;
+    margin: 0;
+    background: #FFFFFF url(/rsrc.php/v3/yU/r/O7nelmd9XSI.png) repeat-x;
+    border: 1px solid #dddfe2;
+    color: #1d2129;
+    height: 22px;
+    line-height: 16px;
+    vertical-align: middle;
+    font-size: 17px;
+    padding: 14px 16px;
+    width: 330px;
+    border-radius: 6px;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  }
+
+  .input:focus
+  {
+    direction: ltr;
+    -webkit-appearance: none;
+    margin: 0;
+    background: #FFFFFF url(/rsrc.php/v3/yU/r/O7nelmd9XSI.png) repeat-x;
+    border: 1px solid #dddfe2;
+    color: #1d2129;
+    height: 22px;
+    line-height: 16px;
+    vertical-align: middle;
+    outline: none!important;
+    font-size: 17px;
+    padding: 14px 16px;
+    width: 330px;
+    border-radius: 6px;
+    border-color: #1b74e4;
+    box-shadow: 0 0 0 2px #e7f3ff;
+    caret-color: #1b74e4;
+    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+  }
+
+  .headlogg
   {
     direction: ltr;
     font-weight: normal;
@@ -205,272 +395,283 @@
     margin-bottom: 0;
   }
 
-  .formdiv
+  .gender-container
   {
     color: #1c1e21;
     direction: ltr;
     line-height: 1.34;
     font-size: 12px;
-    background-color: #fff;
-    border-radius: 0 0 8px 8px;
-    border-top: 1px solid #dadde1;
-    box-sizing: border-box;
-    padding: 16px;
+    text-align: left;
+    margin-top: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
     position: relative;
-    width: 432px;
     font-family: inherit;
   }
 
-  .form
-  {
-    color: #1c1e21;
-    direction: ltr;
-    line-height: 1.34;
-    font-size: 12px;
-    font-family: inherit;
-    margin: 0;
-    padding: 0;
-  }
-
-  .container
-  {
-    color: #1c1e21;
-    direction: ltr;
-    line-height: 1.34;
-    font-size: 12px;
-    text-align: center;
-    border: 1px solid #dddfe2;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
-    margin: auto;
-    padding: 0 0 14px 0;
-    width: 450px;
-    font-family: inherit;
-  }
-
-  .containersub
-  {
-    color: #1c1e21;
-    direction: ltr;
-    line-height: 1.34;
-    font-size: 12px;
-    margin: 0 auto 30px auto;
-    padding: 0 20px 0 0;
-    width: 400px;
-    font-family: inherit;
-  }
-
-  .form-group 
-  {
-    color: #1c1e21;
-    direction: ltr;
-    line-height: 1.34;
-    font-size: 12px;
-    font-family: inherit;
-  }
-
-  .col-md
-  {
-    color: #1c1e21;
-    direction: ltr;
-    line-height: 1.34;
-    font-size: 12px;
-    font-family: inherit;
-  }
-
-  .col-md-
-  {
-    color: #1c1e21;
-    direction: ltr;
-    line-height: 1.34;
-    font-size: 12px;
-    width: 399px;
-    zoom: 1;
-    font-family: inherit;
-  }
-
-
-  .col-fn
+  .gender-lable
   {
     direction: ltr;
-    color: #1c1e21;
-    -webkit-appearance: none;
-    border: 1px solid #ccd0d5;
-    background-color: transparent;
-    position: relative;
-    border-radius: 5px;
-    margin: 4px;
-    border-color: #ccd0d5;
-    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-    font-size: 15px;
-    line-height: 16px;
-    padding: 11px;
-    width: 170px;
-  }
-
-  .col-ln
-  {
-    direction: ltr;
-    color: #1c1e21;
-    -webkit-appearance: none;
-    border: 1px solid #ccd0d5;
-    background-color: transparent;
-    position: relative;
-    border-radius: 5px;
-    margin: 0;
-    border-color: #ccd0d5;
-    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-    font-size: 15px;
-    line-height: 16px;
-    padding: 11px;
-    width: 170px;
-
-  }
-
-  body
-  {
-    color: #1c1e21;
-    direction: ltr;
-    line-height: 1.34;
-    font-size: 12px;
-    display: inline;
-    zoom: 1;
-    min-height: 640px;
-    margin: 0;
-    outline: none;
-    padding: 0;
-    width: auto;
-    font-family: inherit;
-  }
-
-  .email
-  {
-    direction: ltr;
-    color: #1c1e21;
-    -webkit-appearance: none;
-    border: 1px solid #ccd0d5;
-    background-color: transparent;
-    position: relative;
-    border-radius: 5px;
-    margin: 0;
-    border-color: #ccd0d5;
-    width: 375px;
-    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-    font-size: 15px;
-    line-height: 16px;
-    padding: 11px;
-    margin-top: 15px;
-  }
-
-  .pass
-  {
-    direction: ltr;
-    color: #1c1e21;
-    -webkit-appearance: none;
-    border: 1px solid #ccd0d5;
-    background-color: transparent;
-    position: relative;
-    border-radius: 5px;
-    margin: 0;
-    border-color: #ccd0d5;
-    width: 375px;
-    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-    font-size: 15px;
-    line-height: 16px;
-    padding: 11px;
-    margin-top: 15px;
-  }
-
-  .user
-  {
-    direction: ltr;
-    color: #1c1e21;
-    -webkit-appearance: none;
-    border: 1px solid #ccd0d5;
-    background-color: transparent;
-    position: relative;
-    border-radius: 5px;
-    margin: 0;
-    border-color: #ccd0d5;
-    width: 375px;
-    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-    font-size: 15px;
-    line-height: 16px;
-    padding: 11px;
-    margin-top: 15px;
-  }
-
-  .phone
-  {
-    direction: ltr;
-    color: #1c1e21;
-    -webkit-appearance: none;
-    border: 1px solid #ccd0d5;
-    background-color: transparent;
-    position: relative;
-    border-radius: 5px;
-    margin: 0;
-    border-color: #ccd0d5;
-    width: 375px;
-    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-    font-size: 15px;
-    line-height: 16px;
-    padding: 11px;
-    margin-top: 15px;
-  }
-
-  .pass
-  {
-    direction: ltr;
-    color: #1c1e21;
-    -webkit-appearance: none;
-    border: 1px solid #ccd0d5;
-    background-color: transparent;
-    position: relative;
-    border-radius: 5px;
-    margin: 0;
-    border-color: #ccd0d5;
-    width: 375px;
-    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-    font-size: 15px;
-    line-height: 16px;
-    padding: 11px;
-    margin-top: 15px;
-  }
-
-  .dtalab
-  {
+    text-align: left;
     color: #606770;
     font-family: SFProText-Medium, Helvetica, Arial, sans-serif;
     font-size: 12px;
     font-weight: normal;
     line-height: 20px;
+    margin-bottom: 0;
     margin-top: 2px;
-    margin-bottom: 4px;
-    margin-top: 15px;
   }
 
-  .date
+  .gen-contrainer
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    text-align: left;
+    display: flex;
+    flex-wrap: wrap;
+    margin: -8px -6px -6px;
+    font-family: inherit;
+  }
+
+  .male-container
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    text-align: left;
+    border-radius: 4px;
+    background-color: #fff;
+    border: 1px solid #ccd0d5;
+    box-sizing: border-box;
+    display: inline-block;
+    flex: 1 0 auto;
+    font-weight: normal;
+    height: 36px;
+    margin: 8px 6px 6px;
+    padding: 0;
+    position: relative;
+    width: auto;
+    font-family: inherit;
+  }
+
+  .male-lable
   {
     direction: ltr;
+    text-align: left;
+    cursor: default;
+    vertical-align: middle;
+    font-weight: normal;
+    box-sizing: border-box;
     color: #1c1e21;
-    -webkit-appearance: none;
-    border: 1px solid #ccd0d5;
-    background-color: transparent;
-    position: relative;
-    border-radius: 5px;
-    margin: 0;
-    border-color: #ccd0d5;
-    width: 375px;
-    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
+    display: inline-block;
+    font-family: SFProText-Medium, Helvetica, Arial, sans-serif;
     font-size: 15px;
-    line-height: 16px;
-    padding: 11px;
- 
+    line-height: 36px;
+    padding: 0 28px 0 10px;
+    width: 100%;
   }
 
+  .male
+  {
+    direction: ltr;
+    background-color: #fff;
+    color: #1c1e21;
+    font-size: 12px;
+    height: 36px;
+    margin: 0;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    font-family: inherit;
+  }
   
+  .female-container
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    text-align: left;
+    border-radius: 4px;
+    background-color: #fff;
+    border: 1px solid #ccd0d5;
+    box-sizing: border-box;
+    display: inline-block;
+    flex: 1 0 auto;
+    font-weight: normal;
+    height: 36px;
+    margin: 8px 6px 6px;
+    padding: 0;
+    position: relative;
+    width: auto;
+    font-family: inherit;
+  }
 
+  .male-lable
+  {
+    direction: ltr;
+    text-align: left;
+    cursor: default;
+    vertical-align: middle;
+    font-weight: normal;
+    box-sizing: border-box;
+    color: #1c1e21;
+    display: inline-block;
+    font-family: SFProText-Medium, Helvetica, Arial, sans-serif;
+    font-size: 15px;
+    line-height: 36px;
+    padding: 0 28px 0 10px;
+    width: 100%;
+  }
+
+  .male
+  {
+    direction: ltr;
+    background-color: #fff;
+    color: #1c1e21;
+    font-size: 12px;
+    height: 36px;
+    margin: 0;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    font-family: inherit;
+  }
+
+  .signup-container
+  {
+    color: #1c1e21;
+    margin-top: 15px;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    text-align: center;
+    font-family: inherit;
+  }
+
+  .signup
+  {
+    direction: ltr;
+    margin: 0;
+    min-width: 194px;
+    text-align: center;
+    margin-top: 10px;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    font-weight: bold!important;
+    letter-spacing: normal;
+    text-rendering: optimizelegibility;
+    line-height: 126%;
+    background: none;
+    background-color: #00a400;
+    border: none;
+    border-radius: 6px;
+    box-shadow: none;
+    color: #fff;
+    font-size: 18px;
+    height: 36px;
+    overflow: hidden;
+    padding: 0 32px;
+    text-shadow: none;
+    font-family: SFProDisplay-Bold, Helvetica, Arial, sans-serif!important;
+  }
+
+  .signup:hover
+  {
+    direction: ltr;
+    margin: 0;
+    min-width: 194px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    font-weight: bold!important;
+    letter-spacing: normal;
+    text-rendering: optimizelegibility;
+    line-height: 126%;
+    border: none;
+    border-radius: 6px;
+    box-shadow: none;
+    color: #fff;
+    font-size: 18px;
+    height: 36px;
+    overflow: hidden;
+    padding: 0 32px;
+    text-shadow: none;
+    text-decoration: none;
+    background: linear-gradient(#79bc64, #578843);
+    font-family: SFProDisplay-Bold, Helvetica, Arial, sans-serif!important;
+  }
+
+  .signup:active
+  {
+    direction: ltr;
+    margin: 0;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    min-width: 194px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: bold!important;
+    letter-spacing: normal;
+    text-rendering: optimizelegibility;
+    line-height: 126%;
+    top: 1px;
+    background: none;
+    background-color: #00a400;
+    border: none;
+    border-radius: 6px;
+    box-shadow: none;
+    color: #fff;
+    font-size: 18px;
+    height: 36px;
+    overflow: hidden;
+    padding: 0 32px;
+    text-shadow: none;
+    font-family: SFProDisplay-Bold, Helvetica, Arial, sans-serif!important;
+  }
+
+  .already-signup-container
+  {
+    color: #1c1e21;
+    direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
+    font-family: inherit;
+    padding: 10px 0;
+    position: relative;
+    text-align: center;
+  }
+
+  .already-signup
+  {
+    direction: ltr;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: #1877f2;
+    font-family: SFProText-Semibold, Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    line-height: 20px;
+  }
+  .already-signup:hover
+  {
+    direction: ltr;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: #1877f2;
+    font-family: SFProText-Semibold, Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    line-height: 20px;
+  }
 
 </style>
