--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
                   <li class="nav-item signup" id="signup">
                     <a class="nav-link active" href="/sign-up/index.html">Signup</a>
                   </li>
-                  <li class="nav-item" id="user";>
-                      <a class="nav-link active" href="#">Welcome <span id="userd" href="#"></span>
-                    </a>
+                  <li class="nav-item dropdown" id="user";>
+                      <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown" aria-expanded="false">Welcome <span id="userd" href="#"></span></a>
+                       <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Logout</a></li>
+                    </ul>
                   </li>
                 </ul>
               </div>
