--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 
         function logout()
         {
-          document.cookie = "jarvizuser=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+          document.cookie = "jarvizuser=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;
+          window.location("/index.html")
         } 
       </script>
     </body>
