--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -99,6 +99,7 @@
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
       <label for="floatingPassword">Password</label>
     </div>
+    <a href="/sign-in/forgetpassword.html">Forget Password?.</q>
     <button class="w-100 btn btn-lg btn-primary" type="submit" style="margin-top: 20px;">Sign in</button>
     
   </form>
