--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/src/alert.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-firestore.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script src="/src/alert.js"></script>
 
     <script>
       // Your web app's Firebase configuration
@@ -81,7 +85,9 @@
     <link href="sign-in.css" rel="stylesheet">
   </head>
   <body class="text-center">
-    
+    <div id="pageMessages">
+
+    </div>
 <main class="form-signin w-100 m-auto">
   <form id="signup">
     <div style="margin-bottom: 40px">
@@ -129,7 +135,7 @@
             expires.setTime(expires.getTime() + (10 * 24 * 60 * 60 * 1000)); // 10 days
             document.cookie = `jarvizuser=${JSON.stringify(data)};expires=${expires.toUTCString()};path=/`;
             console.log("User data stored");
-            alert("Signin Successfull!!..")
+            createAlert('','SignIn Sucessfull!!..!','You will be redirected to the home page.','success',true,true,'pageMessages');
             // Redirect to home page
             window.location.href = '/index.html';
           }
