--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
           window.location.href="/index.html";
         }
       </script>
-      <iframe src="https://pastebin.pl/view/embed/dc321b2b" style="border:none;width:100%"></iframe>
-      <iframe src="https://pastebin.pl/view/embed/5613ccbb" style="border:none;width:100%"></iframe>
+      <iframe src="https://pastebin.pl/view/embed/dc321b2b" style="border:none;height:300px;width:100%"></iframe>
+      <iframe src="https://pastebin.pl/view/embed/5613ccbb" style="border:none;height:300px;width:100%"></iframe>
       
 
     </body>
