--- a/compailer/python.html
+++ b/compailer/python.html
@@ -3,35 +3,31 @@
 
 <head>
     <meta charset="utf-8">
-<link rel="icon" type="image/x-icon" href="/logo.png"><link rel="icon" type="image/x-icon" href="/logo.png">
+<link rel="icon" type="image/x-icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>J.A.R.V.I.Z.</title>
+    <title>Signup</title>
     <meta property="og:type" content="website">
     <meta property="og:image" content="../assets/img/logo.png">
-    <meta name="description" content=".">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400&amp;display=swap">
-    <link rel="stylesheet" href="assets/css/File-Manager.css">
-    <link rel="stylesheet" href="assets/css/Navbar-Right-Links-Dark-icons.css">
-    <link rel="stylesheet" href="assets/css/Pricing-Centered-badges.css">
-    <link rel="stylesheet" href="assets/css/Projects-Grid-images.css">
-    <link rel="stylesheet" href="assets/css/sticky-dark-top-nav-with-dropdown.css">
-    <link rel="stylesheet" href="assets/css/textarea.compiled.css">
+    <link rel="stylesheet" href="../assets/css/File-Manager.css">
+    <link rel="stylesheet" href="../assets/css/Navbar-Right-Links-Dark-icons.css">
+    <link rel="stylesheet" href="../assets/css/Pricing-Centered-badges.css">
+    <link rel="stylesheet" href="../assets/css/Projects-Grid-images.css">
+    <link rel="stylesheet" href="../assets/css/sticky-dark-top-nav-with-dropdown.css">
+    <link rel="stylesheet" href="../assets/css/textarea.compiled.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>    
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
-        <div class="container"><img src="assets/img/left-logo.png" width="250"><a class="navbar-brand d-flex align-items-center" href="#"></a>
+        <div class="container"><img src="../assets/img/left-logo.png" width="250"><a class="navbar-brand d-flex align-items-center" href="#"></a>
             <ul class="navbar-nav"></ul><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="../index.html">Home&nbsp;</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#">Home&nbsp;</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Tutorials</a></li>
                     <li class="nav-item"><a class="nav-link active" href="subject/4thsemester/index.html">Subject</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link active link-light text-decoration-none" aria-expanded="false" data-bs-toggle="dropdown" href="#">More Options</a>
@@ -53,10 +49,11 @@
             </div>
         </div>
     </nav>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="assets/js/file_viewer/index.js"></script>
-    <script src="assets/js/index.js"></script>
+    <div></div>
+    <h1 class="display-6 text-uppercase text-center text-primary border rounded-0" style="padding: 10px 0px;padding-top: 10px;"><img src="../assets/img/python.png" style="width: 50.5px;padding-top: 0px;">&nbsp; &nbsp; Python Compailer</h1><iframe src="https://www.programiz.com/python-programming/online-compiler/" width="100%" height="800px"></iframe>
+    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bs-init.js"></script>
+    <script src="../assets/js/file_viewer/index.js"></script>
 </body>
 
 </html>
