--- a/github_viewer/index.html
+++ b/github_viewer/index.html
@@ -3,37 +3,35 @@
 
 <head>
     <meta charset="utf-8">
-<link rel="icon" type="image/x-icon" href="/logo.png"><link rel="icon" type="image/x-icon" href="/logo.png">
+<link rel="icon" type="image/x-icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>J.A.R.V.I.Z.</title>
+    <title>Viewer @ J.A.R.V.I.Z</title>
     <meta property="og:type" content="website">
     <meta property="og:image" content="../assets/img/logo.png">
-    <meta name="description" content=".">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400&amp;display=swap">
-    <link rel="stylesheet" href="assets/css/File-Manager.css">
-    <link rel="stylesheet" href="assets/css/Navbar-Right-Links-Dark-icons.css">
-    <link rel="stylesheet" href="assets/css/Pricing-Centered-badges.css">
-    <link rel="stylesheet" href="assets/css/Projects-Grid-images.css">
-    <link rel="stylesheet" href="assets/css/sticky-dark-top-nav-with-dropdown.css">
-    <link rel="stylesheet" href="assets/css/textarea.compiled.css">
+    <link rel="stylesheet" href="../assets/css/File-Manager.css">
+    <link rel="stylesheet" href="../assets/css/Navbar-Right-Links-Dark-icons.css">
+    <link rel="stylesheet" href="../assets/css/Pricing-Centered-badges.css">
+    <link rel="stylesheet" href="../assets/css/Projects-Grid-images.css">
+    <link rel="stylesheet" href="../assets/css/sticky-dark-top-nav-with-dropdown.css">
+    <link rel="stylesheet" href="../assets/css/textarea.compiled.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>    
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
+<script src="/github_viewer/index.js"></script>
+<script>displayContents(url);</script>
 </head>
 
-<body>
+<body style="border-right-width: 2px;">
     <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
-        <div class="container"><img src="assets/img/left-logo.png" width="250"><a class="navbar-brand d-flex align-items-center" href="#"></a>
+        <div class="container"><img src="../assets/img/left-logo.png" width="250"><a class="navbar-brand d-flex align-items-center" href="#"></a>
             <ul class="navbar-nav"></ul><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="../index.html">Home&nbsp;</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Tutorials</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="subject/4thsemester/index.html">Subject</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/subject/4thsemester/index.html" data-bs-target="/subject/4thsemester/index.html">Subject</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link active link-light text-decoration-none" aria-expanded="false" data-bs-toggle="dropdown" href="#">More Options</a>
                         <div class="dropdown-menu"><a class="dropdown-item" href="#">Compailers</a><a class="dropdown-item" href="#">Requests</a><a class="dropdown-item" href="#">About us</a><a class="dropdown-item" href="#">Contact us</a></div>
                     </li>
@@ -53,10 +51,26 @@
             </div>
         </div>
     </nav>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="assets/js/file_viewer/index.js"></script>
-    <script src="assets/js/index.js"></script>
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th style="width: 30px;padding: 12px;text-align: center;border-right-width: 1px;border-left-width: 3px;">-</th>
+                    <th style="padding: 12px;border-right-width: 2px;" class="pt-sm-3"><strong>Name</strong></th>
+                    <th style="border-right-width: 3px;"><strong>Type</strong></th>
+                    <th style="border-right-width: 3px;"><strong>Size</strong></th>
+                </tr>
+            </thead>
+            <tbody id="contents">
+                <tr></tr>
+            </tbody>
+        </table>
+    </div>
+    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bs-init.js"></script>
+    <script src="../assets/js/file_viewer/index.js"></script>
+    <script src="../assets/js/github_viewer/index.js"></script>
+    <script src="../assets/js/index.js"></script>
 </body>
 
 </html>
