--- a/subject/4thsemester/index.html
+++ b/subject/4thsemester/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="../../assets/css/Projects-Grid-images.css">
     <link rel="stylesheet" href="../../assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="../../assets/css/textarea.compiled.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/css/download.compiled.css">
+    <link rel="stylesheet" href="../../assets/css/like.compiled.css">
 </head>
 
 <body>
@@ -59,7 +60,7 @@
             </div>
         </div>
         <div class="row gy-4 gy-xl-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-xl-flex align-items-xl-center">
-            <div class="col" data-bss-hover-animate="flash"><a href="../../github_viewer/index.html?url=https%3A%2F%2Fapi.github.com%2Frepos%2Fchinathanna001%2FCollege%2Fcontents%2FIV_Semester%2FArtificial%20Intelligence%20and%20Machine%20learning%3Fref%3Dmain" style="text-decoration: none;color: black;">
+            <div class="col-xxl-4" data-bss-hover-animate="flash"><a href="../../github_viewer/index.html?url=https%3A%2F%2Fapi.github.com%2Frepos%2Fchinathanna001%2FCollege%2Fcontents%2FIV_Semester%2FArtificial%20Intelligence%20and%20Machine%20learning%3Fref%3Dmain" style="text-decoration: none;color: black;">
                     <div class="card" onclick="window.location.href(&quot;http://www.google.com/&quot;)">
                         <div class="card-body text-center p-4"><img src="../../assets/img/AI&ML.png" width="208"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -32 576 576" width="1em" height="1em" fill="currentColor" class="float-end" style="font-size: 25px;">
                                 <!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. -->
@@ -197,6 +198,7 @@
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/js/bs-init.js"></script>
     <script src="../../assets/js/index.js"></script>
+    <script src="../../assets/js/json/recent_files.js"></script>
 </body>
 
 </html>
