--- a/compailer/python.html
+++ b/compailer/python.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="../assets/css/Projects-Grid-images.css">
     <link rel="stylesheet" href="../assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="../assets/css/textarea.compiled.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/download.compiled.css">
+    <link rel="stylesheet" href="../assets/css/like.compiled.css">
 </head>
 
 <body>
@@ -53,6 +54,8 @@
     <h1 class="display-6 text-uppercase text-center text-primary border rounded-0" style="padding: 10px 0px;padding-top: 10px;"><img src="../assets/img/python.png" style="width: 50.5px;padding-top: 0px;">&nbsp; &nbsp; Python Compailer</h1><iframe src="https://www.programiz.com/python-programming/online-compiler/" width="100%" height="800px"></iframe>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/bs-init.js"></script>
+    <script src="../assets/js/file_viewer/embed-v2.js"></script>
+    <script src="../assets/js/json/recent_files.js"></script>
 </body>
 
 </html>
