--- a/file_viewer/pdf/index.html
+++ b/file_viewer/pdf/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 
 <head>
     <meta charset="utf-8">
-<link rel="icon" type="image/x-icon" href="/logo.png">
+<script src="/assets/js/file_viewer/pdf/index.js"></script><link rel="icon" type="image/x-icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>J.A.R.V.I.Z.</title>
     <meta property="og:type" content="website">
@@ -12,13 +12,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400&amp;display=swap">
+    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="../../assets/css/File-Manager.css">
     <link rel="stylesheet" href="../../assets/css/Navbar-Right-Links-Dark-icons.css">
     <link rel="stylesheet" href="../../assets/css/Pricing-Centered-badges.css">
     <link rel="stylesheet" href="../../assets/css/Projects-Grid-images.css">
     <link rel="stylesheet" href="../../assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="../../assets/css/textarea.compiled.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/css/download.compiled.css">
+    <link rel="stylesheet" href="../../assets/css/like.compiled.css">
 </head>
 
 <body>
@@ -53,16 +55,30 @@
         <div>
             <h4 id="head" style="margin: 20px;">Heading</h4>
         </div>
-        <div style="border-radius: 3px;border-width: 2px;border-style: solid;margin-top: 10px;width: 100%;height: 400px;" readonly=""><object id=pdf data="" width=100% height=500px></object>
-            <div style="width: 150px;height: 30px;margin: 5px;background: var(--bs-blue);border-radius: 15px;text-align: center;"><a id="myLink" href="#" download="" style="color: var(--bs-gray-300);font-weight: bold;text-align: center;padding-top: 0px;text-decoration: none;/*color: black;*/">&nbsp; Download&nbsp;&nbsp;</a><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cloud-download" style="font-size: 28px;color: var(--bs-gray-100);">
-                    <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"></path>
-                    <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"></path>
-                </svg></div>
+        <div style="border-radius: 3px;border-width: 2px;border-style: solid;margin-top: 10px;width: 100%;height: 400px;margin-bottom: 100px;" readonly=""><object id=pdf data="" width=100% height=500px></object>    <div class="col-xxl-2"><a download id="myLink" class="face-button" href="">
+            <div class="face-primary"><span class="icon fa fa-cloud"></span>
+                Download
+            </div>
+            <div id="file-size" class="face-secondary"><span class="icon fa fa-hdd-o"></span></div>
+        </a></div>
+            <div style="margin-top: 20px;margin-bottom: 100px;">
+                <h2>Instructions to Download a File</h2>
+                <p>If the file is not downloading and opening in the browser, follow these steps:</p>
+                <ol>
+                    <li>Hover over the link to the file.</li>
+                    <li>Right-click on the link.</li>
+                    <li>Select "Save As" or "Save Link As" from the context menu.</li>
+                    <li>Choose the download location and filename for the file.</li>
+                    <li>Click "Save" or "OK" to start the download.</li>
+                </ol>
+                <p>If the file still does not download, please report the problem in the.</p>
+            </div>
         </div>
     </div>
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/js/bs-init.js"></script>
     <script src="../../assets/js/file_viewer/pdf/index.js"></script>
+    <script src="../../assets/js/json/recent_files.js"></script>
 </body>
 
 </html>
