--- a/github_viewer/index.html
+++ b/github_viewer/index.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="../assets/css/Projects-Grid-images.css">
     <link rel="stylesheet" href="../assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="../assets/css/textarea.compiled.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/download.compiled.css">
+    <link rel="stylesheet" href="../assets/css/like.compiled.css">
 <script src="/github_viewer/index.js"></script>
 <script>displayContents(url);</script>
 </head>
@@ -70,6 +71,7 @@
     <script src="../assets/js/bs-init.js"></script>
     <script src="../assets/js/github_viewer/index.js"></script>
     <script src="../assets/js/index.js"></script>
+    <script src="../assets/js/json/recent_files.js"></script>
 </body>
 
 </html>
