--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="assets/css/Projects-Grid-images.css">
     <link rel="stylesheet" href="assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="assets/css/textarea.compiled.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/download.compiled.css">
+    <link rel="stylesheet" href="assets/css/like.compiled.css">
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>    
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
@@ -57,13 +58,17 @@
         <div class="container">
             <div class="text-white bg-dark border rounded border-0 p-4 p-md-5" style="border-radius: 15px;">
                 <h4 class="fw-bold text-white mb-3">Recent Updates / Uploads:</h4>
-                <div style="color: black;width: 100%;height: 250px;background: var(--bs-light);border-radius: 15px;padding: 4px;overflow-x: hidden;overflow-y: auto;text-align: justify;"></div>
+                <div style="color: black;width: 100%;height: 250px;background: var(--bs-light);border-radius: 15px;padding: 4px;overflow-x: hidden;overflow-y: auto;text-align: justify;">
+                    <div class="recent-files"></div>
+                </div>
             </div>
         </div>
     </section>
+    <section class="py-4 py-xl-5"></section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/index.js"></script>
+    <script src="assets/js/json/recent_files.js"></script>
 </body>
 
 </html>
