--- a/signup/index.html
+++ b/signup/index.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="../assets/css/Projects-Grid-images.css">
     <link rel="stylesheet" href="../assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="../assets/css/textarea.compiled.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/download.compiled.css">
+    <link rel="stylesheet" href="../assets/css/like.compiled.css">
 </head>
 
 <body>
@@ -57,6 +58,7 @@
     </section>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/bs-init.js"></script>
+    <script src="../assets/js/json/recent_files.js"></script>
     <script src="../assets/js/signup/index.js"></script>
 </body>
 
