--- a/subject/3rdsemester/index.html
+++ b/subject/3rdsemester/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="../../assets/css/Projects-Grid-images.css">
     <link rel="stylesheet" href="../../assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="../../assets/css/textarea.compiled.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/css/download.compiled.css">
+    <link rel="stylesheet" href="../../assets/css/like.compiled.css">
 </head>
 
 <body>
@@ -197,6 +198,7 @@
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/js/bs-init.js"></script>
     <script src="../../assets/js/index.js"></script>
+    <script src="../../assets/js/json/recent_files.js"></script>
 </body>
 
 </html>
