--- a/file_viewer/program/index.html
+++ b/file_viewer/program/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </nav>
-    <div class="container"><script src="/embed-v2.js"></script>
+    <div class="container"><script src="/assets/js/file_viewer/embed-v2.js"></script>
         <div style="margin-top: 20px;margin-bottom: 100px;">
             <h2>Instructions to Download a File</h2>
             <p>If the file is not downloading and opening in the browser, follow these steps:</p>
