--- a/login/index.html
+++ b/login/index.html
@@ -8,8 +8,6 @@
  <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-firestore.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Login @ J.A.R.V.I.Z.</title>
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="../assets/img/logo.png">
     <meta name="description" content=".">
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
@@ -44,7 +42,7 @@
                             <form class="text-center" id="login" method="post">
                                 <div class="mb-3"><input class="form-control" type="email" id="Input" name="email" placeholder="Email"></div>
                                 <div class="mb-3"><input class="form-control" type="password" id="Password" name="password" placeholder="Password"></div>
-                                <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit" style="border-radius: 7px;font-weight: bold;height: 30px;font-size: 15px;">Login</button></div><a href="/forget_password/index.html">
+                                <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit" style="border-radius: 7px;font-weight: bold;height: 30px;font-size: 15px;padding-top: 4px;">Login</button></div><a href="/forget_password/index.html">
                                     <p class="text-muted">Forgot your password?</p>
                                 </a>
                             </form>
@@ -56,7 +54,7 @@
     </section>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/bs-init.js"></script>
-    <script src="../assets/js/json/recent_files.js"></script>
+    <script src="../assets/js/index.js"></script>
     <script src="../assets/js/login/index.js"></script>
 </body>
 
