--- a/file_viewer/index.html
+++ b/file_viewer/index.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-<script src="/assets/js/file_viewer/index.js"></script><link rel="icon" type="image/x-icon" href="/logo.png">
+<script src="/assets/js/file_viewer/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/file-saver"></script><link rel="icon" type="image/x-icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>J.A.R.V.I.Z.</title>
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="../assets/img/logo.png">
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap">
@@ -31,7 +30,6 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home&nbsp;</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Tutorials</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/subject/4thsemester/index.html" data-bs-target="/subject/4thsemester/index.html">Subject</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link active link-light text-decoration-none" aria-expanded="false" data-bs-toggle="dropdown" href="#">More Options</a>
                         <div class="dropdown-menu"><a class="dropdown-item" href="#">Compailers</a><a class="dropdown-item" href="#">Requests</a><a class="dropdown-item" href="#">About us</a><a class="dropdown-item" href="#">Contact us</a></div>
                     </li>
@@ -53,8 +51,8 @@
     </nav>
     <div class="container">
         <div>
-            <h4 id="head" style="margin: 20px;">Heading</h4>
-        </div>    <div class="col-xxl-2"><a download id="myLink" class="face-button" href="">
+            <h4 id="head" style="margin: 20px;">&nbsp; &nbsp;&nbsp;</h4>
+        </div>    <div class="col-xxl-2"><a download id="myLink" class="face-button" onclick="downloadFile()">
             <div class="face-primary"><span class="icon fa fa-cloud"></span>
                 Download
             </div>
@@ -64,7 +62,7 @@
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/bs-init.js"></script>
     <script src="../assets/js/file_viewer/index.js"></script>
-    <script src="../assets/js/json/recent_files.js"></script>
+    <script src="../assets/js/index.js"></script>
 </body>
 
 </html>
