--- a/file_viewer/pdf/index.html
+++ b/file_viewer/pdf/index.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-<script src="/assets/js/file_viewer/pdf/index.js"></script><link rel="icon" type="image/x-icon" href="/logo.png">
+<script src="/assets/js/file_viewer/pdf/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/file-saver"></script><link rel="icon" type="image/x-icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>J.A.R.V.I.Z.</title>
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="../assets/img/logo.png">
     <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap">
@@ -21,6 +20,9 @@
     <link rel="stylesheet" href="../../assets/css/textarea.compiled.css">
     <link rel="stylesheet" href="../../assets/css/download.compiled.css">
     <link rel="stylesheet" href="../../assets/css/like.compiled.css">
+<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>    
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
 </head>
 
 <body>
@@ -31,7 +33,6 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="../index.html">Home&nbsp;</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Tutorials</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/subject/4thsemester/index.html" data-bs-target="/subject/4thsemester/index.html">Subject</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link active link-light text-decoration-none" aria-expanded="false" data-bs-toggle="dropdown" href="#">More Options</a>
                         <div class="dropdown-menu"><a class="dropdown-item" href="#">Compailers</a><a class="dropdown-item" href="#">Requests</a><a class="dropdown-item" href="#">About us</a><a class="dropdown-item" href="#">Contact us</a></div>
                     </li>
@@ -53,32 +54,24 @@
     </nav>
     <div class="container">
         <div>
-            <h4 id="head" style="margin: 20px;">Heading</h4>
+            <h4 id="head" style="margin: 20px;">&nbsp; &nbsp;</h4>
         </div>
-        <div style="border-radius: 3px;border-width: 2px;border-style: solid;margin-top: 10px;width: 100%;height: 400px;margin-bottom: 100px;" readonly=""><object id=pdf data="" width=100% height=500px></object>    <div class="col-xxl-2"><a download id="myLink" class="face-button" href="">
+        <div style="border-radius: 3px;border-width: 2px;border-style: solid;margin-top: 10px;width: 100%;height: auto;margin-bottom: 25px;" readonly=""><object id=pdf data="" width=100% height=500px></object></div>
+    </div>
+    <div class="container d-flex" style="margin-bottom: 50px;">    <div class="col-xxl-2"><a  onclick="downloadFile()" id="myLink" class="face-button">
             <div class="face-primary"><span class="icon fa fa-cloud"></span>
                 Download
             </div>
             <div id="file-size" class="face-secondary"><span class="icon fa fa-hdd-o"></span></div>
         </a></div>
-            <div style="margin-top: 20px;margin-bottom: 100px;">
-                <h2>Instructions to Download a File</h2>
-                <p>If the file is not downloading and opening in the browser, follow these steps:</p>
-                <ol>
-                    <li>Hover over the link to the file.</li>
-                    <li>Right-click on the link.</li>
-                    <li>Select "Save As" or "Save Link As" from the context menu.</li>
-                    <li>Choose the download location and filename for the file.</li>
-                    <li>Click "Save" or "OK" to start the download.</li>
-                </ol>
-                <p>If the file still does not download, please report the problem in the.</p>
-            </div>
+        <div class="progress" style="height: 20px;margin-bottom: 20px;overflow: hidden;background-color: #f5f5f5;border-radius: 4px;">
+            <div class="progress-bar" role="progressbar" style="float: left;width: 0%;height: 100%;font-size: 12px;line-height: 20px;color: #fff;text-align: center;background-color: #337ab7;transition: width 0.6s ease;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
     </div>
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/js/bs-init.js"></script>
     <script src="../../assets/js/file_viewer/pdf/index.js"></script>
-    <script src="../../assets/js/json/recent_files.js"></script>
+    <script src="../../assets/js/index.js"></script>
 </body>
 
 </html>
