--- a/file_viewer/program/index.html
+++ b/file_viewer/program/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="icon" type="image/x-icon" href="/logo.png">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://cdn.jsdelivr.net/npm/file-saver"></script><link rel="icon" type="image/x-icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>J.A.R.V.I.Z.</title>
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="../assets/img/logo.png">
     <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400&amp;display=swap">
+    <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="../../assets/css/File-Manager.css">
     <link rel="stylesheet" href="../../assets/css/Navbar-Right-Links-Dark-icons.css">
     <link rel="stylesheet" href="../../assets/css/Pricing-Centered-badges.css">
@@ -30,7 +30,6 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="../index.html">Home&nbsp;</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Tutorials</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/subject/4thsemester/index.html" data-bs-target="/subject/4thsemester/index.html">Subject</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link active link-light text-decoration-none" aria-expanded="false" data-bs-toggle="dropdown" href="#">More Options</a>
                         <div class="dropdown-menu"><a class="dropdown-item" href="#">Compailers</a><a class="dropdown-item" href="#">Requests</a><a class="dropdown-item" href="#">About us</a><a class="dropdown-item" href="#">Contact us</a></div>
                     </li>
@@ -50,25 +49,17 @@
             </div>
         </div>
     </nav>
-    <div class="container"><script src="/file_viewer/embed-v2.js"></script>
-        <div style="margin-top: 20px;margin-bottom: 100px;">
-            <h2>Instructions to Download a File</h2>
-            <p>If the file is not downloading and opening in the browser, follow these steps:</p>
-            <ol>
-                <li>Hover over the link to the file.</li>
-                <li>Right-click on the link.</li>
-                <li>Select "Save As" or "Save Link As" from the context menu.</li>
-                <li>Choose the download location and filename for the file.</li>
-                <li>Click "Save" or "OK" to start the download.</li>
-            </ol>
-            <p>If the file still does not download, please report the problem in the.</p>
+    <div class="container"><script src="/file_viewer/embed-v2.js"></script></div>
+    <div class="container" style="margin-bottom: 50px;">
+        <div class="col-xxl-2"><a id="myLink" class="face-button" onclick="downloadFile();"><div class="face-primary"><span class="icon fa fa-cloud"></span>                Download            </div><div id="file-size" class="face-secondary"><span class="icon fa fa-hdd-o"></span></div></a>
+            <div id="view" onclick="openincolab();" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="117" height="20"><linearGradient id="b" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><clipPath id="a"><rect width="117" height="20" rx="3" fill="#fff"/></clipPath><g clip-path="url(#a)"><path fill="#555" d="M0 0h30v20H0z"/><path fill="#007ec6" d="M30 0h87v20H30z"/><path fill="url(#b)" d="M0 0h117v20H0z"/></g><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="110"><svg x="4px" y="0px" width="22px" height="20px" viewBox="-2 0 28 24" style="background-color: #fff;border-radius: 1px;"><path style="fill: #e8710a;" d="M1.977,16.77c-2.667-2.277-2.605-7.079,0-9.357C2.919,8.057,3.522,9.075,4.49,9.691c-1.152,1.6-1.146,3.201-0.004,4.803C3.522,15.111,2.918,16.126,1.977,16.77z"/><path style="fill: #f9ab00;" d="M12.257,17.114c-1.767-1.633-2.485-3.658-2.118-6.02c0.451-2.91,2.139-4.893,4.946-5.678c2.565-0.718,4.964-0.217,6.878,1.819c-0.884,0.743-1.707,1.547-2.434,2.446C18.488,8.827,17.319,8.435,16,8.856c-2.404,0.767-3.046,3.241-1.494,5.644c-0.241,0.275-0.493,0.541-0.721,0.826C13.295,15.939,12.511,16.3,12.257,17.114z"/><path style="fill: #e8710a;" d="M19.529,9.682c0.727-0.899,1.55-1.703,2.434-2.446c2.703,2.783,2.701,7.031-0.005,9.764c-2.648,2.674-6.936,2.725-9.701,0.115c0.254-0.814,1.038-1.175,1.528-1.788c0.228-0.285,0.48-0.552,0.721-0.826c1.053,0.916,2.254,1.268,3.6,0.83C20.502,14.551,21.151,11.927,19.529,9.682z"/><path style="fill: #f9ab00;" d="M4.49,9.691C3.522,9.075,2.919,8.057,1.977,7.413c2.209-2.398,5.721-2.942,8.476-1.355c0.555,0.32,0.719,0.606,0.285,1.128c-0.157,0.188-0.258,0.422-0.391,0.631c-0.299,0.47-0.509,1.067-0.929,1.371C8.933,9.539,8.523,8.847,8.021,8.746C6.673,8.475,5.509,8.787,4.49,9.691z"/><path style="fill: #f9ab00;" d="M1.977,16.77c0.941-0.644,1.545-1.659,2.509-2.277c1.373,1.152,2.85,1.433,4.45,0.499c0.332-0.194,0.503-0.088,0.673,0.19c0.386,0.635,0.753,1.285,1.181,1.89c0.34,0.48,0.222,0.715-0.253,1.006C7.84,19.73,4.205,19.188,1.977,16.77z"/></svg><text x="245" y="140" transform="scale(.1)" textLength="30"> </text><text x="725" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="770">Open in Colab</text><text x="725" y="140" transform="scale(.1)" textLength="770">Open in Colab</text></g> </svg>
+</div>
         </div>
     </div>
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/js/bs-init.js"></script>
     <script src="../../assets/js/file_viewer/program/index.js"></script>
     <script src="../../assets/js/index.js"></script>
-    <script src="../../assets/js/json/recent_files.js"></script>
 </body>
 
 </html>
