--- a/signup/index.html
+++ b/signup/index.html
@@ -8,8 +8,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Signup @ J.A.R.V.I.Z.</title>
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="../assets/img/logo.png">
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap">
@@ -28,27 +26,26 @@
     <section class="py-4 py-xl-5">
         <div class="text-center"><img src="../assets/img/up-logo.png" width="200"></div>
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2 style="padding-top: 0px;margin-top: 32px;margin-bottom: -28px;">Sign Up</h2>
-                </div>
-            </div>
-            <div class="row d-flex justify-content-center">
+            <div class="row justify-content-center" style="margin-bottom: 0px;margin-top: 56px;">
                 <div class="col-md-6 col-xl-4">
-                    <div class="card mb-5">
+                    <div class="card mb-5" style="border-radius: 10px;">
                         <div class="card-body d-flex flex-column align-items-center" style="border-width: 0.8px;">
-                            <div class="bs-icon-xl bs-icon-circle bs-icon-primary bs-icon my-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person">
-                                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"></path>
-                                </svg></div>
-                            <form class="text-center" id="signup" method="post">
-                                <div class="mb-3"><input class="form-control" type="email" id="Email" name="email" placeholder="Email"></div>
-                                <div class="mb-3"><input class="form-control" type="text" id="FirstName" name="firstname" placeholder="First Name"></div>
-                                <div class="mb-3"><input class="form-control" type="text" id="LastName" name="lastname" placeholder="Last Name"></div>
-                                <div class="mb-3"><input class="form-control" type="text" id="Username" name="user" placeholder="Username" required=""></div>
-                                <div class="text-start mb-3" style="padding-top: 0px;margin-top: 0px;border-radius: 6px;border: 1px solid rgba(80,83,85,0.26);"><label class="form-label text-start" style="font-size: 12px;padding-bottom: 0px;padding-top: 0px;margin-top: 0px;margin-bottom: 1px;border-color: rgb(33,37,41);color: rgba(33,37,41,0.65);margin-left: 12px;">Date of birth:</label><input class="form-control" id="DOB" type="date" style="border-style: none;margin-top: -12px;color: rgba(33,37,41,0.63);font-size: 12px;" required=""></div>
-                                <div class="mb-3"><input class="form-control" type="tel" id="Phone" placeholder="Phone Number"></div>
-                                <div class="mb-3"><input class="form-control" type="password" id="Password" name="password" placeholder="Password"></div>
-                                <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit" style="height: 30px;font-size: 15px;">Sign Up</button></div>
+                            <form id="signup-form">
+                                <h3 class="text-center" style="margin-bottom: 20px;margin-top: 20px;">Create your account</h3>
+                                <div class="form-group mb-3"><input class="form-control form-control-sm item" type="text" id="username" placeholder="Username" name="username" required="" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9_.-]*$"></div>
+                                <div class="form-group mb-3"><input class="form-control form-control-sm item" type="email" id="email" placeholder="Email" name="email" required="" inputmode="email"></div>
+                                <div class="form-group mb-3"><input class="form-control form-control-sm item" type="text" id="firstname" placeholder="First Name" name="firstname" required="" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9_.-]*$"></div>
+                                <div class="form-group mb-3"><input class="form-control form-control-sm item" type="text" id="lastname" placeholder="Last Name" name="lastname" required="" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9_.-]*$"></div>
+                                <div class="form-group mb-3"><input class="form-control form-control-sm" type="tel" id="phonenumber" name="phonenumber" placeholder="Phone Number"></div>
+                                <div class="form-group mb-3">
+                                    <div class="form-group mb-3">
+                                        <div class="form-group mb-3">
+                                            <div class="input-group mb-4"><span class="input-group-text" style="font-size: 12px;">Date of Birth</span><input class="form-control form-control-sm" id="dateofbirth" type="date" required=""></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group mb-3"><input class="form-control form-control-sm item" type="password" id="password" placeholder="Password" name="password" required="" minlength="6"></div>
+                                <div class="form-group mb-3"><button class="btn btn-primary d-block create-account w-100" type="submit" style="font-size: 20px;">Create Account</button></div>
                             </form>
                         </div>
                     </div>
@@ -56,9 +53,21 @@
             </div>
         </div>
     </section>
+    <div style="position: fixed;bottom: 120px;width: 100%;">
+        <div class="alert alert-danger float-end alert-dismissible" role="alert" id="erremail" data-dismiss="alert"><button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="alert"></button><span><strong>Email already found!!. </strong>Try different email id.</span></div>
+    </div>
+    <div style="position: fixed;bottom: 180px;width: 100%;">
+        <div class="alert alert-success float-end alert-dismissible" role="alert" id="succalert-3" data-dismiss="alert"><button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="alert"></button><span><strong>Account created successfully !!.&nbsp;</strong>You will be redirected to the login page.</span></div>
+    </div>
+    <div style="position: fixed;bottom: 0px;width: 100%;">
+        <div class="alert alert-danger float-end alert-dismissible" role="alert" id="erruser" data-dismiss="alert"><button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="alert"></button><span><strong>Username already found.. </strong>Try different username.</span></div>
+    </div>
+    <div style="position: fixed;bottom: 60px;width: 100%;">
+        <div class="alert alert-danger float-end alert-dismissible" role="alert" id="errphone" data-dismiss="alert"><button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="alert"></button><span><strong>Phone number already found.. </strong>Use different phone number..</span></div>
+    </div>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/bs-init.js"></script>
-    <script src="../assets/js/json/recent_files.js"></script>
+    <script src="../assets/js/index.js"></script>
     <script src="../assets/js/signup/index.js"></script>
 </body>
 
