--- a/file_viewer/program/index.html
+++ b/file_viewer/program/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../../assets/css/textarea.compiled.css">
     <link rel="stylesheet" href="../../assets/css/download.compiled.css">
     <link rel="stylesheet" href="../../assets/css/like.compiled.css">
+    <script src="/embed-v2.js"</script>
 </head>
 
 <body>
