--- a/github_viewer/index.html
+++ b/github_viewer/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-<link rel="icon" type="image/x-icon" href="/logo.png">
+<link rel="icon" type="image/x-icon" href="\assets\img\logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Viewer @ J.A.R.V.I.Z</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9851237424755952"
