--- a/file_viewer/index.html
+++ b/file_viewer/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-<script src="/assets/js/file_viewer/index.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/file-saver"></script><link rel="icon" type="image/x-icon" href="/logo.png">
+    <script src="/assets/js/file_viewer/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/file-saver"></script><link rel="icon" type="image/x-icon" href="\assets\img\logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>J.A.R.V.I.Z.</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9851237424755952"
