--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <h2>Semester's</h2>
                 </div>
             </div>
+            <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5910044,document.body||document.documentElement)</script>
             <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
                 <div class="col">
                     <div class="card" data-bss-hover-animate="flash">
