--- a/file_viewer/pdf/index.html
+++ b/file_viewer/pdf/index.html
@@ -25,6 +25,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>    
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5910044,document.body||document.documentElement)</script>
 </head>
 
 <body>
