--- a/github_viewer/index.html
+++ b/github_viewer/index.html
@@ -23,6 +23,7 @@
      <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../assets/js/bs-init.js"></script>
     <script src="../assets/js/github_viewer/index.js"></script>
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5910044,document.body||document.documentElement)</script>
     <script src="../assets/js/index.js"></script>
 <script>displayContents(url);</script>
 </head>
