--- a/file-viewer/index.html
+++ b/file-viewer/index.html
@@ -8,6 +8,7 @@
   <script src="https://kit.fontawesome.com/b4752c62b1.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://kit.fontawesome.com/b4752c62b1.css" crossorigin="anonymous">
+  <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5910044,document.body||document.documentElement)</script>
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const url = urlParams.get('url');
