--- a/file_viewer/index.html
+++ b/file_viewer/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../assets/css/textarea.compiled.css">
     <link rel="stylesheet" href="../assets/css/download.compiled.css">
     <link rel="stylesheet" href="../assets/css/like.compiled.css">
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5910044,document.body||document.documentElement)</script>
 </head>
 
 <body>
