--- a/signup/index.html
+++ b/signup/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../assets/css/Projects-Grid-images.css">
     <link rel="stylesheet" href="../assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="../assets/css/textarea.compiled.css">
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5910044,document.body||document.documentElement)</script>
     <link rel="stylesheet" href="../assets/css/download.compiled.css">
     <link rel="stylesheet" href="../assets/css/like.compiled.css">
 </head>
