--- a/login/index.html
+++ b/login/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../assets/css/sticky-dark-top-nav-with-dropdown.css">
     <link rel="stylesheet" href="../assets/css/textarea.compiled.css">
     <link rel="stylesheet" href="../assets/css/download.compiled.css">
-    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5910044,document.body||document.documentElement)</script>
+    <script type='text/javascript' src='//pl19414061.highrevenuegate.com/26/93/3c/26933c6861e59eab30f7274863609ae4.js'></script>
     <link rel="stylesheet" href="../assets/css/like.compiled.css">
 </head>
 
