--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript">
+	atOptions = {
+		'key' : '069e04a709630f8b2cc30dec1b718728',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/069e04a709630f8b2cc30dec1b718728/invoke.js"></scr' + 'ipt>');
+</script>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
