--- a/index.html
+++ b/index.html
@@ -85,16 +85,8 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript">
-	atOptions = {
-		'key' : '069e04a709630f8b2cc30dec1b718728',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/069e04a709630f8b2cc30dec1b718728/invoke.js"></scr' + 'ipt>');
-</script>
+        <script async="async" data-cfasync="false" src="//pl19414346.highrevenuegate.com/922b2c00e6842df51c12decd7084d197/invoke.js"></script>
+<div id="container-922b2c00e6842df51c12decd7084d197"></div>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
