--- a/subject/4thsemester/index.html
+++ b/subject/4thsemester/index.html
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                 </a></div>
-            <div class="col" data-bss-hover-animate="flash"><a href="www.google.com" style="text-decoration: none;color: black;">
+            <div class="col" data-bss-hover-animate="flash"><a href="../../github_viewer/index.html?url=https://api.github.com/repos/josephsharon07/College/contents/IV_Semester/Database%20Management%20Systems%20Laboratory?ref=main" style="text-decoration: none;color: black;">
                     <div class="card" onclick="window.location.href(&quot;http://www.google.com/&quot;)" style="width: 350px;height: 500px;">
                         <div class="card-body text-center p-4"><img src="../../assets/img/database-storage.png" width="208"></div>
                         <div class="card-footer p-4">
