--- a/index.html
+++ b/index.html
@@ -64,15 +64,22 @@
             <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
                 <div class="col">
                     <div class="card" data-bss-hover-animate="flash">
-                        <div class="card-body p-4" onclick="window.location.href=&quot;subject/3rdsemester/index.html&quot;">
+                        <div class="card-body p-4" onclick="window.location.href='../../github_viewer/index.html?url=https%3A%2F%2Fapi.github.com%2Frepos%2Fjosephsharon07%2FCollege%2Fcontents%2FIII_Semester%3Fref%3Dmain';">
                             <h4 class="card-title">III<sup>rd</sup> Semester</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card" data-bss-hover-animate="flash">
-                        <div class="card-body p-4" onclick="window.location.href=&quot;subject/4thsemester/index.html&quot;">
+                        <div class="card-body p-4" onclick="window.location.href='../../github_viewer/index.html?url=https%3A%2F%2Fapi.github.com%2Frepos%2Fjosephsharon07%2FCollege%2Fcontents%2FIV_Semester%3Fref%3Dmain';">
                             <h4 class="card-title">IV<sup>th</sup>&nbsp;Semester</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" data-bss-hover-animate="flash">
+                        <div class="card-body p-4" onclick="window.location.href='../../github_viewer/index.html?url=https%3A%2F%2Fapi.github.com%2Frepos%2Fjosephsharon07%2FCollege%2Fcontents%2FV_Semester%3Fref%3Dmain';">
+                            <h4 class="card-title">V<sup>th</sup>&nbsp;Semester</h4>
                         </div>
                     </div>
                 </div>
